--- a/stock_marke_analysis/index.html
+++ b/stock_marke_analysis/index.html
@@ -55,7 +55,7 @@
                     <p class="change negative">-0.8%</p>
                 </div>
                 <div class="stock-card">
-                    <h3>GOOGL</h3>
+                    <h3>GOOGLE</h3>
                     <p>Alphabet Inc.</p>
                     <p class="price">$2800.00</p>
                     <p class="change positive">+2.1%</p>
@@ -73,7 +73,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 Stock Analysis. All rights reserved.</p>
+            <p>&copy; 2025 Stock Analysis. All rights reserved.</p>
             <ul>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
